# cxview

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
cxview/: __init__.py  __main__.py  app.py  cli.py  graph.py  graph_layout.py  graph_page.py  node.py  page.py  pin.py  property copy.py  property.py  session.py  wire.py
cxview/pages/: index.py
cxview/pages/main/: __init__.py
tests/pipeline/callbacks/: callbacks.h  test_callbacks.py
