[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cxview"
version = "0.1.0"
description = 'Clang Visualization Utility'
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

requires-python = ">=3.10"

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "clang ==21.1.7"
]

[project.scripts]
cxview = 'cxview.cli:cli'

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "pytest",
]
